[package]
name = "cyclo_complexity"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter="0.17"
tree-sitter-python = "0.17"
walkdir = "2.3.2"
glob = "*"
threadpool = "1.8.1"


[lib]
name = "py_cyclo_complexity"
crate-type =["cdylib"]

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]
